@@ -1,5 +1,5 @@
 /*
- * "$Id: job.c,v 1.124.2.87 2004/06/29 13:15:11 mike Exp $"
+ * "$Id: job.c,v 1.124.2.88 2004/06/29 16:59:21 mike Exp $"
  *
  *   Job management routines for the Common UNIX Printing System (CUPS).
  *
@@ -37,7 +37,6 @@
  *                          or held jobs for a user.
  *   HoldJob()            - Hold the specified job.
  *   LoadAllJobs()        - Load all jobs from disk.
- *   LoadJob()            - Load a job from disk.
  *   MoveJob()            - Move the specified job to a different
  *                          destination.
  *   ReleaseJob()         - Release the specified job.
@@ -94,13 +93,13 @@ static void		set_hold_until(job_t *job, time_t holdtime);
  * 'AddJob()' - Add a new job to the job queue...
  */
 
-job_t *				/* O - New job record */
-AddJob(int        priority,	/* I - Job priority */
-       const char *dest)	/* I - Job destination */
+job_t *					/* O - New job record */
+AddJob(int        priority,		/* I - Job priority */
+       const char *dest)		/* I - Job destination */
 {
-  job_t	*job,			/* New job record */
-	*current,		/* Current job in queue */
-	*prev;			/* Previous job in queue */
+  job_t	*job,				/* New job record */
+	*current,			/* Current job in queue */
+	*prev;				/* Previous job in queue */
 
 
   job = calloc(sizeof(job_t), 1);
@@ -138,13 +137,13 @@ AddJob(int        priority,	/* I - Job priority */
  */
 
 void
-CancelJob(int id,		/* I - Job to cancel */
-          int purge)		/* I - Purge jobs? */
+CancelJob(int id,			/* I - Job to cancel */
+          int purge)			/* I - Purge jobs? */
 {
-  int	i;			/* Looping var */
-  job_t	*current,		/* Current job */
-	*prev;			/* Previous job in list */
-  char	filename[1024];		/* Job filename */
+  int	i;				/* Looping var */
+  job_t	*current,			/* Current job */
+	*prev;				/* Previous job in list */
+  char	filename[1024];			/* Job filename */
 
 
   LogMessage(L_DEBUG, "CancelJob: id = %d", id);
@@ -276,10 +275,10 @@ CancelJobs(const char *dest,		/* I - Destination to cancel */
 void
 CheckJobs(void)
 {
-  job_t		*current,	/* Current job in queue */
-		*next;		/* Next job in queue */
-  printer_t	*printer,	/* Printer destination */
-		*pclass;	/* Printer class destination */
+  job_t		*current,		/* Current job in queue */
+		*next;			/* Next job in queue */
+  printer_t	*printer,		/* Printer destination */
+		*pclass;		/* Printer class destination */
 
 
   DEBUG_puts("CheckJobs()");
@@ -372,8 +371,8 @@ CheckJobs(void)
 void
 CleanJobs(void)
 {
-  job_t	*job,		/* Current job */
-	*next;		/* Next job */
+  job_t	*job,				/* Current job */
+	*next;				/* Next job */
 
 
   if (MaxJobs == 0)
@@ -390,14 +389,148 @@ CleanJobs(void)
 
 
 /*
+ * 'FinishJob()' - Finish a job.
+ */
+
+void
+FinishJob(job_t *job)			/* I - Job */
+{
+  int		job_history;		/* Did CancelJob() keep the job? */
+  cups_ptype_t	ptype;			/* Printer type (color, small, etc.) */
+
+
+  LogMessage(L_DEBUG, "FinishJob: job %d, file %d is complete.",
+             job->id, job->current_file - 1);
+
+  if (job->status_pipe >= 0 && job->current_file >= job->num_files)
+  {
+   /*
+    * Close the pipe and clear the input bit.
+    */
+
+    LogMessage(L_DEBUG2, "FinishJob: Closing status input pipe %d...",
+               job->status_pipe);
+
+    close(job->status_pipe);
+
+    LogMessage(L_DEBUG2, "FinishJob: Removing fd %d from InputSet...",
+               job->status_pipe);
+
+    FD_CLR(job->status_pipe, InputSet);
+    job->status_pipe = -1;
+  }
+
+  if (job->status < 0)
+  {
+   /*
+    * Backend had errors; stop it...
+    */
+
+    ptype = job->printer->type;
+
+    StopJob(job->id, 0);
+    job->state->values[0].integer = IPP_JOB_PENDING;
+    SaveJob(job->id);
+
+   /*
+    * If the job was queued to a class, try requeuing it...  For
+    * faxes, hold the current job for 5 minutes.
+    */
+
+    if (job->dtype & (CUPS_PRINTER_CLASS | CUPS_PRINTER_IMPLICIT))
+      CheckJobs();
+    else if (ptype & CUPS_PRINTER_FAX)
+    {
+     /*
+      * See how many times we've tried to send the job; if more than
+      * the limit, cancel the job.
+      */
+
+      job->tries ++;
+
+      if (job->tries >= FaxRetryLimit)
+      {
+       /*
+	* Too many tries...
+	*/
+
+	LogMessage(L_ERROR, "Canceling fax job %d since it could not be sent after %d tries.",
+	           job->id, FaxRetryLimit);
+	CancelJob(job->id, 0);
+      }
+      else
+      {
+       /*
+	* Try again in N seconds...
+	*/
+
+	set_hold_until(job, time(NULL) + FaxRetryInterval);
+      }
+
+      CheckJobs();
+    }
+  }
+  else if (job->status > 0)
+  {
+   /*
+    * Filter had errors; cancel it...
+    */
+
+    if (job->current_file < job->num_files)
+      StartJob(job->id, job->printer);
+    else
+    {
+      job_history = JobHistory && !(job->dtype & CUPS_PRINTER_REMOTE);
+
+      CancelJob(job->id, 0);
+
+      if (job_history)
+      {
+        job->state->values[0].integer = IPP_JOB_ABORTED;
+	SaveJob(job->id);
+      }
+
+      CheckJobs();
+    }
+  }
+  else
+  {
+   /*
+    * Job printed successfully; cancel it...
+    */
+
+    if (job->current_file < job->num_files)
+    {
+      FilterLevel -= job->cost;
+      StartJob(job->id, job->printer);
+    }
+    else
+    {
+      job_history = JobHistory && !(job->dtype & CUPS_PRINTER_REMOTE);
+
+      CancelJob(job->id, 0);
+
+      if (job_history)
+      {
+        job->state->values[0].integer = IPP_JOB_COMPLETED;
+	SaveJob(job->id);
+      }
+
+      CheckJobs();
+    }
+  }
+}
+
+
+/*
  * 'FreeAllJobs()' - Free all jobs from memory.
  */
 
 void
 FreeAllJobs(void)
 {
-  job_t	*job,		/* Current job */
-	*next;		/* Next job */
+  job_t	*job,				/* Current job */
+	*next;				/* Next job */
 
 
   HoldSignals();
@@ -429,10 +562,10 @@ FreeAllJobs(void)
  * 'FindJob()' - Find the specified job.
  */
 
-job_t *				/* O - Job data */
-FindJob(int id)			/* I - Job ID */
+job_t *					/* O - Job data */
+FindJob(int id)				/* I - Job ID */
 {
-  job_t	*current;		/* Current job */
+  job_t	*current;			/* Current job */
 
 
   for (current = Jobs; current != NULL; current = current->next)
@@ -490,9 +623,9 @@ GetUserJobCount(const char *username)	/* I - Username */
  */
 
 void
-HoldJob(int id)			/* I - Job ID */
+HoldJob(int id)				/* I - Job ID */
 {
-  job_t	*job;			/* Job data */
+  job_t	*job;				/* Job data */
 
 
   LogMessage(L_DEBUG, "HoldJob: id = %d", id);
@@ -520,29 +653,25 @@ HoldJob(int id)			/* I - Job ID */
 void
 LoadAllJobs(void)
 {
-  DIR		*dir;		/* Directory */
-  DIRENT	*dent;		/* Directory entry */
-  char		filename[1024];	/* Full filename of job file */
-  int		fd;		/* File descriptor */
-  job_t		*job,		/* New job */
-		*current,	/* Current job */
-		*prev;		/* Previous job */
-  int		jobid,		/* Current job ID */
-		fileid;		/* Current file ID */
-  ipp_attribute_t *attr;	/* Job attribute */
-  char		method[HTTP_MAX_URI],
-				/* Method portion of URI */
-		username[HTTP_MAX_URI],
-				/* Username portion of URI */
-		host[HTTP_MAX_URI],
-				/* Host portion of URI */
-		resource[HTTP_MAX_URI];
-				/* Resource portion of URI */
-  int		port;		/* Port portion of URI */
-  printer_t	*p;		/* Printer or class */
-  const char	*dest;		/* Destination */
-  mime_type_t	**filetypes;	/* New filetypes array */
-  int		*compressions;	/* New compressions array */
+  DIR		*dir;			/* Directory */
+  DIRENT	*dent;			/* Directory entry */
+  char		filename[1024];		/* Full filename of job file */
+  int		fd;			/* File descriptor */
+  job_t		*job,			/* New job */
+		*current,		/* Current job */
+		*prev;			/* Previous job */
+  int		jobid,			/* Current job ID */
+		fileid;			/* Current file ID */
+  ipp_attribute_t *attr;		/* Job attribute */
+  char		method[HTTP_MAX_URI],	/* Method portion of URI */
+		username[HTTP_MAX_URI],	/* Username portion of URI */
+		host[HTTP_MAX_URI],	/* Host portion of URI */
+		resource[HTTP_MAX_URI];	/* Resource portion of URI */
+  int		port;			/* Port portion of URI */
+  printer_t	*p;			/* Printer or class */
+  const char	*dest;			/* Destination */
+  mime_type_t	**filetypes;		/* New filetypes array */
+  int		*compressions;		/* New compressions array */
 
 
  /*
@@ -590,7 +719,12 @@ LoadAllJobs(void)
       * Assign the job ID...
       */
 
-      job->id = atoi(dent->d_name + 1);
+      job->id             = atoi(dent->d_name + 1);
+      job->back_pipes[0]  = -1;
+      job->back_pipes[1]  = -1;
+      job->print_pipes[0] = -1;
+      job->print_pipes[1] = -1;
+      job->status_pipe    = -1;
 
       LogMessage(L_DEBUG, "LoadAllJobs: Loading attributes for job %d...\n",
                  job->id);
@@ -836,12 +970,12 @@ LoadAllJobs(void)
  */
 
 void
-MoveJob(int        id,		/* I - Job ID */
-        const char *dest)	/* I - Destination */
+MoveJob(int        id,			/* I - Job ID */
+        const char *dest)		/* I - Destination */
 {
-  job_t			*current;/* Current job */
-  ipp_attribute_t	*attr;	/* job-printer-uri attribute */
-  printer_t		*p;	/* Destination printer or class */
+  job_t			*current;	/* Current job */
+  ipp_attribute_t	*attr;		/* job-printer-uri attribute */
+  printer_t		*p;		/* Destination printer or class */
 
 
   if ((p = FindPrinter(dest)) == NULL)
@@ -878,9 +1012,9 @@ MoveJob(int        id,		/* I - Job ID */
  */
 
 void
-ReleaseJob(int id)		/* I - Job ID */
+ReleaseJob(int id)			/* I - Job ID */
 {
-  job_t	*job;			/* Job data */
+  job_t	*job;				/* Job data */
 
 
   LogMessage(L_DEBUG, "ReleaseJob: id = %d", id);
@@ -904,9 +1038,9 @@ ReleaseJob(int id)		/* I - Job ID */
  */
 
 void
-RestartJob(int id)		/* I - Job ID */
+RestartJob(int id)			/* I - Job ID */
 {
-  job_t	*job;			/* Job data */
+  job_t	*job;				/* Job data */
 
 
   if ((job = FindJob(id)) == NULL)
@@ -927,11 +1061,11 @@ RestartJob(int id)		/* I - Job ID */
  */
 
 void
-SaveJob(int id)			/* I - Job ID */
+SaveJob(int id)				/* I - Job ID */
 {
-  job_t	*job;			/* Pointer to job */
-  char	filename[1024];		/* Job control filename */
-  int	fd;			/* File descriptor */
+  job_t	*job;				/* Pointer to job */
+  char	filename[1024];			/* Job control filename */
+  int	fd;				/* File descriptor */
 
 
   if ((job = FindJob(id)) == NULL)
@@ -1100,13 +1234,13 @@ SetJobHoldUntil(int        id,		/* I - Job ID */
  */
 
 void
-SetJobPriority(int id,		/* I - Job ID */
-               int priority)	/* I - New priority (0 to 100) */
+SetJobPriority(int id,			/* I - Job ID */
+               int priority)		/* I - New priority (0 to 100) */
 {
-  job_t		*job,		/* Job to change */
-		*current,	/* Current job */
-		*prev;		/* Previous job */
-  ipp_attribute_t *attr;	/* Job attribute */
+  job_t		*job,			/* Job to change */
+		*current,		/* Current job */
+		*prev;			/* Previous job */
+  ipp_attribute_t *attr;		/* Job attribute */
 
 
  /*
@@ -2086,7 +2220,7 @@ StartJob(int       id,			/* I - Job ID */
 void
 StopAllJobs(void)
 {
-  job_t	*current;		/* Current job */
+  job_t	*current;			/* Current job */
 
 
   DEBUG_puts("StopAllJobs()");
@@ -2105,11 +2239,11 @@ StopAllJobs(void)
  */
 
 void
-StopJob(int id,			/* I - Job ID */
-        int force)		/* I - 1 = Force all filters to stop */
+StopJob(int id,				/* I - Job ID */
+        int force)			/* I - 1 = Force all filters to stop */
 {
-  int	i;			/* Looping var */
-  job_t	*current;		/* Current job */
+  int	i;				/* Looping var */
+  job_t	*current;			/* Current job */
 
 
   LogMessage(L_DEBUG, "StopJob: id = %d, force = %d", id, force);
@@ -2212,16 +2346,14 @@ StopJob(int id,			/* I - Job ID */
  */
 
 void
-UpdateJob(job_t *job)		/* I - Job to check */
+UpdateJob(job_t *job)			/* I - Job to check */
 {
-  int		i;		/* Looping var */
-  int		bytes;		/* Number of bytes read */
-  int		copies;		/* Number of copies printed */
-  char		*lineptr,	/* Pointer to end of line in buffer */
-		*message;	/* Pointer to message text */
-  int		loglevel;	/* Log level for message */
-  int		job_history;	/* Did CancelJob() keep the job? */
-  cups_ptype_t	ptype;		/* Printer type (color, small, etc.) */
+  int		i;			/* Looping var */
+  int		bytes;			/* Number of bytes read */
+  int		copies;			/* Number of copies printed */
+  char		*lineptr,		/* Pointer to end of line in buffer */
+		*message;		/* Pointer to message text */
+  int		loglevel;		/* Log level for message */
 
 
   if ((bytes = read(job->status_pipe, job->buffer + job->bufused,
@@ -2399,9 +2531,10 @@ UpdateJob(job_t *job)		/* I - Job to check */
     * exit statuses.
     */
 
-    for (i = 0; job->filters[i]; i ++)
-      if (job->filters[i] > 0)
-	return;
+    for (i = 0; job->filters[i] < 0; i ++);
+
+    if (job->filters[i])
+      return;
 
     if (job->current_file >= job->num_files && job->backend > 0)
       return;
@@ -2410,126 +2543,7 @@ UpdateJob(job_t *job)		/* I - Job to check */
     * Handle the end of job stuff...
     */
 
-    LogMessage(L_DEBUG, "UpdateJob: job %d, file %d is complete.",
-               job->id, job->current_file - 1);
-
-    if (job->status_pipe >= 0)
-    {
-     /*
-      * Close the pipe and clear the input bit.
-      */
-
-      LogMessage(L_DEBUG2, "UpdateJob: Closing status input pipe %d...",
-        	 job->status_pipe);
-
-      close(job->status_pipe);
-
-      LogMessage(L_DEBUG2, "UpdateJob: Removing fd %d from InputSet...",
-                 job->status_pipe);
-
-      FD_CLR(job->status_pipe, InputSet);
-      job->status_pipe = -1;
-    }
-
-    if (job->status < 0)
-    {
-     /*
-      * Backend had errors; stop it...
-      */
-
-      ptype = job->printer->type;
-
-      StopJob(job->id, 0);
-      job->state->values[0].integer = IPP_JOB_PENDING;
-      SaveJob(job->id);
-
-     /*
-      * If the job was queued to a class, try requeuing it...  For
-      * faxes, hold the current job for 5 minutes.
-      */
-
-      if (job->dtype & (CUPS_PRINTER_CLASS | CUPS_PRINTER_IMPLICIT))
-        CheckJobs();
-      else if (ptype & CUPS_PRINTER_FAX)
-      {
-       /*
-        * See how many times we've tried to send the job; if more than
-	* the limit, cancel the job.
-	*/
-
-        job->tries ++;
-
-	if (job->tries >= FaxRetryLimit)
-	{
-	 /*
-	  * Too many tries...
-	  */
-
-	  LogMessage(L_ERROR, "Canceling fax job %d since it could not be sent after %d tries.",
-	             job->id, FaxRetryLimit);
-	  CancelJob(job->id, 0);
-	}
-	else
-	{
-	 /*
-	  * Try again in N seconds...
-	  */
-
-	  set_hold_until(job, time(NULL) + FaxRetryInterval);
-	}
-
-        CheckJobs();
-      }
-    }
-    else if (job->status > 0)
-    {
-     /*
-      * Filter had errors; cancel it...
-      */
-
-      if (job->current_file < job->num_files)
-        StartJob(job->id, job->printer);
-      else
-      {
-	job_history = JobHistory && !(job->dtype & CUPS_PRINTER_REMOTE);
-
-        CancelJob(job->id, 0);
-
-        if (job_history)
-	{
-          job->state->values[0].integer = IPP_JOB_ABORTED;
-	  SaveJob(job->id);
-	}
-
-        CheckJobs();
-      }
-    }
-    else
-    {
-     /*
-      * Job printed successfully; cancel it...
-      */
-
-      if (job->current_file < job->num_files)
-      {
-        FilterLevel -= job->cost;
-        StartJob(job->id, job->printer);
-      }
-      else
-      {
-	job_history = JobHistory && !(job->dtype & CUPS_PRINTER_REMOTE);
-
-	CancelJob(job->id, 0);
-
-        if (job_history)
-	{
-          job->state->values[0].integer = IPP_JOB_COMPLETED;
-	  SaveJob(job->id);
-	}
-
-	CheckJobs();
-      }
-    }
+    FinishJob(job);
   }
 }
 
@@ -2539,12 +2553,12 @@ UpdateJob(job_t *job)		/* I - Job to check */
  *		    the textual IPP attributes.
  */
 
-int				/* O - Size of buffer to hold IPP attributes */
-ipp_length(ipp_t *ipp)		/* I - IPP request */
+int					/* O - Size of buffer to hold IPP attributes */
+ipp_length(ipp_t *ipp)			/* I - IPP request */
 {
-  int			bytes; 	/* Number of bytes */
-  int			i;	/* Looping var */
-  ipp_attribute_t	*attr;  /* Current attribute */
+  int			bytes; 		/* Number of bytes */
+  int			i;		/* Looping var */
+  ipp_attribute_t	*attr;		/* Current attribute */
 
 
  /*
@@ -2877,5 +2891,5 @@ set_hold_until(job_t *job, 		/* I - Job to update */
 
 
 /*
- * End of "$Id: job.c,v 1.124.2.87 2004/06/29 13:15:11 mike Exp $".
+ * End of "$Id: job.c,v 1.124.2.88 2004/06/29 16:59:21 mike Exp $".
  */
